python/compiler/generated/pyxasmParser.cpp

// Generated from pyxasm.g4 by ANTLR 4.7.2


#include "pyxasmListener.h"

#include "pyxasmParser.h"


using namespace antlrcpp;
using namespace pyxasm;
using namespace antlr4;

pyxasmParser::pyxasmParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

pyxasmParser::~pyxasmParser() {
  delete _interpreter;
}

std::string pyxasmParser::getGrammarFileName() const {
  return "pyxasm.g4";
}

const std::vector<std::string>& pyxasmParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& pyxasmParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- XaccsrcContext ------------------------------------------------------------------

pyxasmParser::XaccsrcContext::XaccsrcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::XacckernelContext* pyxasmParser::XaccsrcContext::xacckernel() {
  return getRuleContext<pyxasmParser::XacckernelContext>(0);
}


size_t pyxasmParser::XaccsrcContext::getRuleIndex() const {
  return pyxasmParser::RuleXaccsrc;
}

void pyxasmParser::XaccsrcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXaccsrc(this);
}

void pyxasmParser::XaccsrcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXaccsrc(this);
}

pyxasmParser::XaccsrcContext* pyxasmParser::xaccsrc() {
  XaccsrcContext *_localctx = _tracker.createInstance<XaccsrcContext>(_ctx, getState());
  enterRule(_localctx, 0, pyxasmParser::RuleXaccsrc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    xacckernel();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- XacckernelContext ------------------------------------------------------------------

pyxasmParser::XacckernelContext::XacckernelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::MainprogContext* pyxasmParser::XacckernelContext::mainprog() {
  return getRuleContext<pyxasmParser::MainprogContext>(0);
}

std::vector<pyxasmParser::IdContext *> pyxasmParser::XacckernelContext::id() {
  return getRuleContexts<pyxasmParser::IdContext>();
}

pyxasmParser::IdContext* pyxasmParser::XacckernelContext::id(size_t i) {
  return getRuleContext<pyxasmParser::IdContext>(i);
}

std::vector<pyxasmParser::ParamContext *> pyxasmParser::XacckernelContext::param() {
  return getRuleContexts<pyxasmParser::ParamContext>();
}

pyxasmParser::ParamContext* pyxasmParser::XacckernelContext::param(size_t i) {
  return getRuleContext<pyxasmParser::ParamContext>(i);
}


size_t pyxasmParser::XacckernelContext::getRuleIndex() const {
  return pyxasmParser::RuleXacckernel;
}

void pyxasmParser::XacckernelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXacckernel(this);
}

void pyxasmParser::XacckernelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXacckernel(this);
}

pyxasmParser::XacckernelContext* pyxasmParser::xacckernel() {
  XacckernelContext *_localctx = _tracker.createInstance<XacckernelContext>(_ctx, getState());
  enterRule(_localctx, 2, pyxasmParser::RuleXacckernel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(pyxasmParser::T__0);
    setState(41);
    dynamic_cast<XacckernelContext *>(_localctx)->kernelname = id();
    setState(42);
    match(pyxasmParser::T__1);
    setState(43);
    dynamic_cast<XacckernelContext *>(_localctx)->qbit = id();
    setState(48);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == pyxasmParser::T__2) {
      setState(44);
      match(pyxasmParser::T__2);
      setState(45);
      param();
      setState(50);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(51);
    match(pyxasmParser::T__3);
    setState(52);
    match(pyxasmParser::T__4);
    setState(53);
    mainprog();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

pyxasmParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::IdContext* pyxasmParser::ParamContext::id() {
  return getRuleContext<pyxasmParser::IdContext>(0);
}


size_t pyxasmParser::ParamContext::getRuleIndex() const {
  return pyxasmParser::RuleParam;
}

void pyxasmParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void pyxasmParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

pyxasmParser::ParamContext* pyxasmParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 4, pyxasmParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    id();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainprogContext ------------------------------------------------------------------

pyxasmParser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::ProgramContext* pyxasmParser::MainprogContext::program() {
  return getRuleContext<pyxasmParser::ProgramContext>(0);
}


size_t pyxasmParser::MainprogContext::getRuleIndex() const {
  return pyxasmParser::RuleMainprog;
}

void pyxasmParser::MainprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprog(this);
}

void pyxasmParser::MainprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprog(this);
}

pyxasmParser::MainprogContext* pyxasmParser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 6, pyxasmParser::RuleMainprog);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    program();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

pyxasmParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pyxasmParser::LineContext *> pyxasmParser::ProgramContext::line() {
  return getRuleContexts<pyxasmParser::LineContext>();
}

pyxasmParser::LineContext* pyxasmParser::ProgramContext::line(size_t i) {
  return getRuleContext<pyxasmParser::LineContext>(i);
}


size_t pyxasmParser::ProgramContext::getRuleIndex() const {
  return pyxasmParser::RuleProgram;
}

void pyxasmParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void pyxasmParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

pyxasmParser::ProgramContext* pyxasmParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 8, pyxasmParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(59);
      line();
      setState(62); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << pyxasmParser::T__5)
      | (1ULL << pyxasmParser::COMMENT)
      | (1ULL << pyxasmParser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

pyxasmParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pyxasmParser::StatementContext *> pyxasmParser::LineContext::statement() {
  return getRuleContexts<pyxasmParser::StatementContext>();
}

pyxasmParser::StatementContext* pyxasmParser::LineContext::statement(size_t i) {
  return getRuleContext<pyxasmParser::StatementContext>(i);
}

pyxasmParser::CommentContext* pyxasmParser::LineContext::comment() {
  return getRuleContext<pyxasmParser::CommentContext>(0);
}


size_t pyxasmParser::LineContext::getRuleIndex() const {
  return pyxasmParser::RuleLine;
}

void pyxasmParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void pyxasmParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

pyxasmParser::LineContext* pyxasmParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 10, pyxasmParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(70);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pyxasmParser::T__5:
      case pyxasmParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(65); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(64);
                  statement();
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(67); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        break;
      }

      case pyxasmParser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(69);
        comment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

pyxasmParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::InstructionContext* pyxasmParser::StatementContext::instruction() {
  return getRuleContext<pyxasmParser::InstructionContext>(0);
}


size_t pyxasmParser::StatementContext::getRuleIndex() const {
  return pyxasmParser::RuleStatement;
}

void pyxasmParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void pyxasmParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

pyxasmParser::StatementContext* pyxasmParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 12, pyxasmParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pyxasmParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(72);
        instruction();
        break;
      }

      case pyxasmParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(73);
        match(pyxasmParser::T__5);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

pyxasmParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pyxasmParser::CommentContext::COMMENT() {
  return getToken(pyxasmParser::COMMENT, 0);
}


size_t pyxasmParser::CommentContext::getRuleIndex() const {
  return pyxasmParser::RuleComment;
}

void pyxasmParser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void pyxasmParser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

pyxasmParser::CommentContext* pyxasmParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 14, pyxasmParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(pyxasmParser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

pyxasmParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::IdContext* pyxasmParser::InstructionContext::id() {
  return getRuleContext<pyxasmParser::IdContext>(0);
}

pyxasmParser::ExplistContext* pyxasmParser::InstructionContext::explist() {
  return getRuleContext<pyxasmParser::ExplistContext>(0);
}

pyxasmParser::OptionsMapContext* pyxasmParser::InstructionContext::optionsMap() {
  return getRuleContext<pyxasmParser::OptionsMapContext>(0);
}


size_t pyxasmParser::InstructionContext::getRuleIndex() const {
  return pyxasmParser::RuleInstruction;
}

void pyxasmParser::InstructionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstruction(this);
}

void pyxasmParser::InstructionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstruction(this);
}

pyxasmParser::InstructionContext* pyxasmParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 16, pyxasmParser::RuleInstruction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    dynamic_cast<InstructionContext *>(_localctx)->inst_name = id();
    setState(79);
    match(pyxasmParser::T__1);

    setState(80);
    dynamic_cast<InstructionContext *>(_localctx)->bits_and_params = explist();
    setState(83);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pyxasmParser::T__2) {
      setState(81);
      match(pyxasmParser::T__2);
      setState(82);
      dynamic_cast<InstructionContext *>(_localctx)->options = optionsMap();
    }
    setState(85);
    match(pyxasmParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BufferIndexContext ------------------------------------------------------------------

pyxasmParser::BufferIndexContext::BufferIndexContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::IdContext* pyxasmParser::BufferIndexContext::id() {
  return getRuleContext<pyxasmParser::IdContext>(0);
}

tree::TerminalNode* pyxasmParser::BufferIndexContext::INT() {
  return getToken(pyxasmParser::INT, 0);
}


size_t pyxasmParser::BufferIndexContext::getRuleIndex() const {
  return pyxasmParser::RuleBufferIndex;
}

void pyxasmParser::BufferIndexContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBufferIndex(this);
}

void pyxasmParser::BufferIndexContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBufferIndex(this);
}

pyxasmParser::BufferIndexContext* pyxasmParser::bufferIndex() {
  BufferIndexContext *_localctx = _tracker.createInstance<BufferIndexContext>(_ctx, getState());
  enterRule(_localctx, 18, pyxasmParser::RuleBufferIndex);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    id();

    setState(88);
    match(pyxasmParser::T__6);
    setState(89);
    match(pyxasmParser::INT);
    setState(90);
    match(pyxasmParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BitsOrParamTypeContext ------------------------------------------------------------------

pyxasmParser::BitsOrParamTypeContext::BitsOrParamTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pyxasmParser::BufferIndexContext *> pyxasmParser::BitsOrParamTypeContext::bufferIndex() {
  return getRuleContexts<pyxasmParser::BufferIndexContext>();
}

pyxasmParser::BufferIndexContext* pyxasmParser::BitsOrParamTypeContext::bufferIndex(size_t i) {
  return getRuleContext<pyxasmParser::BufferIndexContext>(i);
}

std::vector<pyxasmParser::ExpContext *> pyxasmParser::BitsOrParamTypeContext::exp() {
  return getRuleContexts<pyxasmParser::ExpContext>();
}

pyxasmParser::ExpContext* pyxasmParser::BitsOrParamTypeContext::exp(size_t i) {
  return getRuleContext<pyxasmParser::ExpContext>(i);
}


size_t pyxasmParser::BitsOrParamTypeContext::getRuleIndex() const {
  return pyxasmParser::RuleBitsOrParamType;
}

void pyxasmParser::BitsOrParamTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBitsOrParamType(this);
}

void pyxasmParser::BitsOrParamTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBitsOrParamType(this);
}

pyxasmParser::BitsOrParamTypeContext* pyxasmParser::bitsOrParamType() {
  BitsOrParamTypeContext *_localctx = _tracker.createInstance<BitsOrParamTypeContext>(_ctx, getState());
  enterRule(_localctx, 20, pyxasmParser::RuleBitsOrParamType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      bufferIndex();
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == pyxasmParser::T__2) {
        setState(93);
        match(pyxasmParser::T__2);
        setState(94);
        bufferIndex();
        setState(99);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << pyxasmParser::T__1)
        | (1ULL << pyxasmParser::T__11)
        | (1ULL << pyxasmParser::T__15)
        | (1ULL << pyxasmParser::T__16)
        | (1ULL << pyxasmParser::T__17)
        | (1ULL << pyxasmParser::T__18)
        | (1ULL << pyxasmParser::T__19)
        | (1ULL << pyxasmParser::T__20)
        | (1ULL << pyxasmParser::T__21)
        | (1ULL << pyxasmParser::ID)
        | (1ULL << pyxasmParser::REAL)
        | (1ULL << pyxasmParser::INT)
        | (1ULL << pyxasmParser::STRING))) != 0)) {
        setState(100);
        exp(0);
        setState(105);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionsMapContext ------------------------------------------------------------------

pyxasmParser::OptionsMapContext::OptionsMapContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pyxasmParser::OptionsTypeContext *> pyxasmParser::OptionsMapContext::optionsType() {
  return getRuleContexts<pyxasmParser::OptionsTypeContext>();
}

pyxasmParser::OptionsTypeContext* pyxasmParser::OptionsMapContext::optionsType(size_t i) {
  return getRuleContext<pyxasmParser::OptionsTypeContext>(i);
}


size_t pyxasmParser::OptionsMapContext::getRuleIndex() const {
  return pyxasmParser::RuleOptionsMap;
}

void pyxasmParser::OptionsMapContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionsMap(this);
}

void pyxasmParser::OptionsMapContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionsMap(this);
}

pyxasmParser::OptionsMapContext* pyxasmParser::optionsMap() {
  OptionsMapContext *_localctx = _tracker.createInstance<OptionsMapContext>(_ctx, getState());
  enterRule(_localctx, 22, pyxasmParser::RuleOptionsMap);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(pyxasmParser::T__8);
    setState(109);
    optionsType();
    setState(114);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == pyxasmParser::T__2) {
      setState(110);
      match(pyxasmParser::T__2);
      setState(111);
      optionsType();
      setState(116);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(117);
    match(pyxasmParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionsTypeContext ------------------------------------------------------------------

pyxasmParser::OptionsTypeContext::OptionsTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::StringContext* pyxasmParser::OptionsTypeContext::string() {
  return getRuleContext<pyxasmParser::StringContext>(0);
}

pyxasmParser::ExpContext* pyxasmParser::OptionsTypeContext::exp() {
  return getRuleContext<pyxasmParser::ExpContext>(0);
}


size_t pyxasmParser::OptionsTypeContext::getRuleIndex() const {
  return pyxasmParser::RuleOptionsType;
}

void pyxasmParser::OptionsTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionsType(this);
}

void pyxasmParser::OptionsTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionsType(this);
}

pyxasmParser::OptionsTypeContext* pyxasmParser::optionsType() {
  OptionsTypeContext *_localctx = _tracker.createInstance<OptionsTypeContext>(_ctx, getState());
  enterRule(_localctx, 24, pyxasmParser::RuleOptionsType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    dynamic_cast<OptionsTypeContext *>(_localctx)->key = string();
    setState(120);
    match(pyxasmParser::T__4);
    setState(121);
    dynamic_cast<OptionsTypeContext *>(_localctx)->value = exp(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExplistContext ------------------------------------------------------------------

pyxasmParser::ExplistContext::ExplistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pyxasmParser::ExpContext *> pyxasmParser::ExplistContext::exp() {
  return getRuleContexts<pyxasmParser::ExpContext>();
}

pyxasmParser::ExpContext* pyxasmParser::ExplistContext::exp(size_t i) {
  return getRuleContext<pyxasmParser::ExpContext>(i);
}


size_t pyxasmParser::ExplistContext::getRuleIndex() const {
  return pyxasmParser::RuleExplist;
}

void pyxasmParser::ExplistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExplist(this);
}

void pyxasmParser::ExplistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyxasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExplist(this);
}

pyxasmParser::ExplistContext* pyxasmParser::explist() {
  ExplistContext *_localctx = _tracker.createInstance<ExplistContext>(_ctx, getState());
  enterRule(_localctx, 26, pyxasmParser::RuleExplist);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(123);
    exp(0);
    setState(128);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(124);
        match(pyxasmParser::T__2);
        setState(125);
        exp(0); 
      }
      setState(130);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

pyxasmParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyxasmParser::IdContext* pyxasmParser::ExpContext::id() {
  return getRuleContext<pyxasmParser::IdContext>(0);
}

std::vector<pyxasmParser::ExpContext *> pyxasmParser::ExpContext::exp() {
  return getRuleContexts<pyxasmParser::ExpContext>();
}

pyxasmParser::ExpContext* pyxasmParser::ExpContext::exp(size_t i) {
  return getRuleContext<pyxasmParser::ExpContext>(i);
}

pyxasmParser::UnaryopContext* pyxasmParser::ExpContext::unaryop() {
  return getRuleContext<pyxasmParser::UnaryopContext>(0);
}

pyxasmParser::StringContext* pyxasmParser::ExpContext::string() {
  return getRuleContext<pyxasmParser::StringContext>(0);
}

pyxasmParser::RealContext* pyxasmParser::ExpContext::real() {
  return getRuleContext<pyxasmParser::RealContext>(0);
}

tree::TerminalNode* pyxasmParser::ExpContext::INT() {
  return getToken(pyxasmParser::INT, 0);
}

pyxasmParser::BufferIndexContext* pyxasmParser::ExpContext::bufferIndex() {
  return getRuleContext<pyxasmParser::BufferIndexContext>(0);
}

